Compiler/syntaxic.output
Grammaire

    0 $accept: programme $end

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    2 partie_declarations: partie_declarations declaration
    3                    | /* vide */

    4 declaration: decl_define
    5            | decl_constante

    6 decl_define: T_DEFINE liste_vars T_COLON type T_SEMI
    7            | T_DEFINE liste_vars T_COLON type T_EQ_INIT T_CONST_INT T_SEMI
    8            | T_DEFINE liste_vars T_COLON type T_EQ_INIT T_CONST_FLOAT T_SEMI
    9            | T_DEFINE liste_vars T_COLON T_LBRACK type T_SEMI T_CONST_INT T_RBRACK T_SEMI

   10 liste_vars: T_IDENT
   11           | liste_vars T_PIPE T_IDENT

   12 decl_constante: T_CONST T_IDENT T_COLON T_INTEGER T_EQ_INIT T_CONST_INT T_SEMI
   13               | T_CONST T_IDENT T_COLON T_FLOAT T_EQ_INIT T_CONST_FLOAT T_SEMI
   14               | error T_SEMI

   15 type: T_INTEGER
   16     | T_FLOAT

   17 partie_instructions: partie_instructions instruction
   18                    | /* vide */

   19 instruction: affectation
   20            | condition
   21            | boucle_while
   22            | boucle_for
   23            | lecture
   24            | ecriture
   25            | error T_SEMI

   26 affectation: T_IDENT T_ASSIGN expression T_SEMI
   27            | T_IDENT T_LBRACK expression T_RBRACK T_ASSIGN expression T_SEMI

   28 condition: T_IF T_LPAREN condition_expr T_RPAREN T_THEN T_COLON T_LBRACE partie_instructions T_RBRACE T_ELSE T_LBRACE partie_instructions T_RBRACE T_ENDIF T_SEMI

   29 boucle_while: T_LOOP T_WHILE T_LPAREN condition_expr T_RPAREN T_LBRACE partie_instructions T_RBRACE T_ENDLOOP T_SEMI

   30 boucle_for: T_FOR T_IDENT T_IN borne_for T_TO borne_for T_LBRACE partie_instructions T_RBRACE T_ENDFOR T_SEMI

   31 borne_for: T_CONST_INT
   32          | T_IDENT

   33 lecture: T_READ T_LPAREN T_IDENT T_RPAREN T_SEMI

   34 ecriture: T_OUT T_LPAREN liste_out T_RPAREN T_SEMI

   35 liste_out: elem_out
   36          | liste_out T_COMMA elem_out

   37 elem_out: T_STRING
   38         | T_IDENT

   39 expression: expression T_PLUS expression
   40           | expression T_MINUS expression
   41           | expression T_MUL expression
   42           | expression T_DIV expression
   43           | T_LPAREN expression T_RPAREN
   44           | T_IDENT
   45           | T_IDENT T_LBRACK expression T_RBRACK
   46           | T_CONST_INT
   47           | T_CONST_FLOAT

   48 condition_expr: expression T_GT expression
   49               | expression T_LT expression
   50               | expression T_GE expression
   51               | expression T_LE expression
   52               | expression T_EQ expression
   53               | expression T_NEQ expression
   54               | T_LPAREN condition_expr T_AND condition_expr T_RPAREN
   55               | T_LPAREN condition_expr T_OR condition_expr T_RPAREN
   56               | T_NON T_LPAREN condition_expr T_RPAREN


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256) 14 25
T_BEGINPROJECT (258) 1
T_ENDPROJECT (259) 1
T_SETUP (260) 1
T_RUN (261) 1
T_DEFINE (262) 6 7 8 9
T_CONST (263) 12 13
T_INTEGER (264) 12 15
T_FLOAT (265) 13 16
T_IF (266) 28
T_THEN (267) 28
T_ELSE (268) 28
T_ENDIF (269) 28
T_LOOP (270) 29
T_WHILE (271) 29
T_ENDLOOP (272) 29
T_FOR (273) 30
T_IN (274) 30
T_TO (275) 30
T_ENDFOR (276) 30
T_AND (277) 54
T_OR (278) 55
T_NON (279) 56
T_OUT (280) 34
T_READ (281) 33
T_IDENT (282) 1 10 11 12 13 26 27 30 32 33 38 44 45
T_STRING (283) 37
T_CONST_INT (284) 7 9 12 31 46
T_CONST_FLOAT (285) 8 13 47
T_ASSIGN (286) 26 27
T_EQ_INIT (287) 7 8 12 13
T_LE (288) 51
T_GE (289) 50
T_EQ (290) 52
T_NEQ (291) 53
T_LT (292) 49
T_GT (293) 48
T_PLUS (294) 39
T_MINUS (295) 40
T_MUL (296) 41
T_DIV (297) 42
T_SEMI (298) 1 6 7 8 9 12 13 14 25 26 27 28 29 30 33 34
T_COLON (299) 1 6 7 8 9 12 13 28
T_PIPE (300) 11
T_LBRACE (301) 1 28 29 30
T_RBRACE (302) 1 28 29 30
T_LBRACK (303) 9 27 45
T_RBRACK (304) 9 27 45
T_LPAREN (305) 28 29 33 34 43 54 55 56
T_RPAREN (306) 28 29 33 34 43 54 55 56
T_COMMA (307) 36


Non-terminaux, suivis des règles où ils apparaissent

$accept (53)
    à gauche: 0
programme (54)
    à gauche: 1, à droite: 0
partie_declarations (55)
    à gauche: 2 3, à droite: 1 2
declaration (56)
    à gauche: 4 5, à droite: 2
decl_define (57)
    à gauche: 6 7 8 9, à droite: 4
liste_vars (58)
    à gauche: 10 11, à droite: 6 7 8 9 11
decl_constante (59)
    à gauche: 12 13 14, à droite: 5
type (60)
    à gauche: 15 16, à droite: 6 7 8 9
partie_instructions (61)
    à gauche: 17 18, à droite: 1 17 28 29 30
instruction (62)
    à gauche: 19 20 21 22 23 24 25, à droite: 17
affectation (63)
    à gauche: 26 27, à droite: 19
condition (64)
    à gauche: 28, à droite: 20
boucle_while (65)
    à gauche: 29, à droite: 21
boucle_for (66)
    à gauche: 30, à droite: 22
borne_for (67)
    à gauche: 31 32, à droite: 30
lecture (68)
    à gauche: 33, à droite: 23
ecriture (69)
    à gauche: 34, à droite: 24
liste_out (70)
    à gauche: 35 36, à droite: 34 36
elem_out (71)
    à gauche: 37 38, à droite: 35 36
expression (72)
    à gauche: 39 40 41 42 43 44 45 46 47, à droite: 26 27 39 40 41
    42 43 45 48 49 50 51 52 53
condition_expr (73)
    à gauche: 48 49 50 51 52 53 54 55 56, à droite: 28 29 54 55 56


état 0

    0 $accept: . programme $end

    T_BEGINPROJECT  décalage et aller à l'état 1

    programme  aller à l'état 2


état 1

    1 programme: T_BEGINPROJECT . T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    T_IDENT  décalage et aller à l'état 3


état 2

    0 $accept: programme . $end

    $end  décalage et aller à l'état 4


état 3

    1 programme: T_BEGINPROJECT T_IDENT . T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    T_SEMI  décalage et aller à l'état 5


état 4

    0 $accept: programme $end .

    $défaut  accepter


état 5

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI . T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    T_SETUP  décalage et aller à l'état 6


état 6

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP . T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    T_COLON  décalage et aller à l'état 7


état 7

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON . partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    $défaut  réduction par utilisation de la règle 3 (partie_declarations)

    partie_declarations  aller à l'état 8


état 8

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations . T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI
    2 partie_declarations: partie_declarations . declaration

    error     décalage et aller à l'état 9
    T_RUN     décalage et aller à l'état 10
    T_DEFINE  décalage et aller à l'état 11
    T_CONST   décalage et aller à l'état 12

    declaration     aller à l'état 13
    decl_define     aller à l'état 14
    decl_constante  aller à l'état 15


état 9

   14 decl_constante: error . T_SEMI

    T_SEMI  décalage et aller à l'état 16


état 10

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN . T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    T_COLON  décalage et aller à l'état 17


état 11

    6 decl_define: T_DEFINE . liste_vars T_COLON type T_SEMI
    7            | T_DEFINE . liste_vars T_COLON type T_EQ_INIT T_CONST_INT T_SEMI
    8            | T_DEFINE . liste_vars T_COLON type T_EQ_INIT T_CONST_FLOAT T_SEMI
    9            | T_DEFINE . liste_vars T_COLON T_LBRACK type T_SEMI T_CONST_INT T_RBRACK T_SEMI

    T_IDENT  décalage et aller à l'état 18

    liste_vars  aller à l'état 19


état 12

   12 decl_constante: T_CONST . T_IDENT T_COLON T_INTEGER T_EQ_INIT T_CONST_INT T_SEMI
   13               | T_CONST . T_IDENT T_COLON T_FLOAT T_EQ_INIT T_CONST_FLOAT T_SEMI

    T_IDENT  décalage et aller à l'état 20


état 13

    2 partie_declarations: partie_declarations declaration .

    $défaut  réduction par utilisation de la règle 2 (partie_declarations)


état 14

    4 declaration: decl_define .

    $défaut  réduction par utilisation de la règle 4 (declaration)


état 15

    5 declaration: decl_constante .

    $défaut  réduction par utilisation de la règle 5 (declaration)


état 16

   14 decl_constante: error T_SEMI .

    $défaut  réduction par utilisation de la règle 14 (decl_constante)


état 17

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON . T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    T_LBRACE  décalage et aller à l'état 21


état 18

   10 liste_vars: T_IDENT .

    $défaut  réduction par utilisation de la règle 10 (liste_vars)


état 19

    6 decl_define: T_DEFINE liste_vars . T_COLON type T_SEMI
    7            | T_DEFINE liste_vars . T_COLON type T_EQ_INIT T_CONST_INT T_SEMI
    8            | T_DEFINE liste_vars . T_COLON type T_EQ_INIT T_CONST_FLOAT T_SEMI
    9            | T_DEFINE liste_vars . T_COLON T_LBRACK type T_SEMI T_CONST_INT T_RBRACK T_SEMI
   11 liste_vars: liste_vars . T_PIPE T_IDENT

    T_COLON  décalage et aller à l'état 22
    T_PIPE   décalage et aller à l'état 23


état 20

   12 decl_constante: T_CONST T_IDENT . T_COLON T_INTEGER T_EQ_INIT T_CONST_INT T_SEMI
   13               | T_CONST T_IDENT . T_COLON T_FLOAT T_EQ_INIT T_CONST_FLOAT T_SEMI

    T_COLON  décalage et aller à l'état 24


état 21

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE . partie_instructions T_RBRACE T_ENDPROJECT T_SEMI

    $défaut  réduction par utilisation de la règle 18 (partie_instructions)

    partie_instructions  aller à l'état 25


état 22

    6 decl_define: T_DEFINE liste_vars T_COLON . type T_SEMI
    7            | T_DEFINE liste_vars T_COLON . type T_EQ_INIT T_CONST_INT T_SEMI
    8            | T_DEFINE liste_vars T_COLON . type T_EQ_INIT T_CONST_FLOAT T_SEMI
    9            | T_DEFINE liste_vars T_COLON . T_LBRACK type T_SEMI T_CONST_INT T_RBRACK T_SEMI

    T_INTEGER  décalage et aller à l'état 26
    T_FLOAT    décalage et aller à l'état 27
    T_LBRACK   décalage et aller à l'état 28

    type  aller à l'état 29


état 23

   11 liste_vars: liste_vars T_PIPE . T_IDENT

    T_IDENT  décalage et aller à l'état 30


état 24

   12 decl_constante: T_CONST T_IDENT T_COLON . T_INTEGER T_EQ_INIT T_CONST_INT T_SEMI
   13               | T_CONST T_IDENT T_COLON . T_FLOAT T_EQ_INIT T_CONST_FLOAT T_SEMI

    T_INTEGER  décalage et aller à l'état 31
    T_FLOAT    décalage et aller à l'état 32


état 25

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions . T_RBRACE T_ENDPROJECT T_SEMI
   17 partie_instructions: partie_instructions . instruction

    error     décalage et aller à l'état 33
    T_IF      décalage et aller à l'état 34
    T_LOOP    décalage et aller à l'état 35
    T_FOR     décalage et aller à l'état 36
    T_OUT     décalage et aller à l'état 37
    T_READ    décalage et aller à l'état 38
    T_IDENT   décalage et aller à l'état 39
    T_RBRACE  décalage et aller à l'état 40

    instruction   aller à l'état 41
    affectation   aller à l'état 42
    condition     aller à l'état 43
    boucle_while  aller à l'état 44
    boucle_for    aller à l'état 45
    lecture       aller à l'état 46
    ecriture      aller à l'état 47


état 26

   15 type: T_INTEGER .

    $défaut  réduction par utilisation de la règle 15 (type)


état 27

   16 type: T_FLOAT .

    $défaut  réduction par utilisation de la règle 16 (type)


état 28

    9 decl_define: T_DEFINE liste_vars T_COLON T_LBRACK . type T_SEMI T_CONST_INT T_RBRACK T_SEMI

    T_INTEGER  décalage et aller à l'état 26
    T_FLOAT    décalage et aller à l'état 27

    type  aller à l'état 48


état 29

    6 decl_define: T_DEFINE liste_vars T_COLON type . T_SEMI
    7            | T_DEFINE liste_vars T_COLON type . T_EQ_INIT T_CONST_INT T_SEMI
    8            | T_DEFINE liste_vars T_COLON type . T_EQ_INIT T_CONST_FLOAT T_SEMI

    T_EQ_INIT  décalage et aller à l'état 49
    T_SEMI     décalage et aller à l'état 50


état 30

   11 liste_vars: liste_vars T_PIPE T_IDENT .

    $défaut  réduction par utilisation de la règle 11 (liste_vars)


état 31

   12 decl_constante: T_CONST T_IDENT T_COLON T_INTEGER . T_EQ_INIT T_CONST_INT T_SEMI

    T_EQ_INIT  décalage et aller à l'état 51


état 32

   13 decl_constante: T_CONST T_IDENT T_COLON T_FLOAT . T_EQ_INIT T_CONST_FLOAT T_SEMI

    T_EQ_INIT  décalage et aller à l'état 52


état 33

   25 instruction: error . T_SEMI

    T_SEMI  décalage et aller à l'état 53


état 34

   28 condition: T_IF . T_LPAREN condition_expr T_RPAREN T_THEN T_COLON T_LBRACE partie_instructions T_RBRACE T_ELSE T_LBRACE partie_instructions T_RBRACE T_ENDIF T_SEMI

    T_LPAREN  décalage et aller à l'état 54


état 35

   29 boucle_while: T_LOOP . T_WHILE T_LPAREN condition_expr T_RPAREN T_LBRACE partie_instructions T_RBRACE T_ENDLOOP T_SEMI

    T_WHILE  décalage et aller à l'état 55


état 36

   30 boucle_for: T_FOR . T_IDENT T_IN borne_for T_TO borne_for T_LBRACE partie_instructions T_RBRACE T_ENDFOR T_SEMI

    T_IDENT  décalage et aller à l'état 56


état 37

   34 ecriture: T_OUT . T_LPAREN liste_out T_RPAREN T_SEMI

    T_LPAREN  décalage et aller à l'état 57


état 38

   33 lecture: T_READ . T_LPAREN T_IDENT T_RPAREN T_SEMI

    T_LPAREN  décalage et aller à l'état 58


état 39

   26 affectation: T_IDENT . T_ASSIGN expression T_SEMI
   27            | T_IDENT . T_LBRACK expression T_RBRACK T_ASSIGN expression T_SEMI

    T_ASSIGN  décalage et aller à l'état 59
    T_LBRACK  décalage et aller à l'état 60


état 40

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE . T_ENDPROJECT T_SEMI

    T_ENDPROJECT  décalage et aller à l'état 61


état 41

   17 partie_instructions: partie_instructions instruction .

    $défaut  réduction par utilisation de la règle 17 (partie_instructions)


état 42

   19 instruction: affectation .

    $défaut  réduction par utilisation de la règle 19 (instruction)


état 43

   20 instruction: condition .

    $défaut  réduction par utilisation de la règle 20 (instruction)


état 44

   21 instruction: boucle_while .

    $défaut  réduction par utilisation de la règle 21 (instruction)


état 45

   22 instruction: boucle_for .

    $défaut  réduction par utilisation de la règle 22 (instruction)


état 46

   23 instruction: lecture .

    $défaut  réduction par utilisation de la règle 23 (instruction)


état 47

   24 instruction: ecriture .

    $défaut  réduction par utilisation de la règle 24 (instruction)


état 48

    9 decl_define: T_DEFINE liste_vars T_COLON T_LBRACK type . T_SEMI T_CONST_INT T_RBRACK T_SEMI

    T_SEMI  décalage et aller à l'état 62


état 49

    7 decl_define: T_DEFINE liste_vars T_COLON type T_EQ_INIT . T_CONST_INT T_SEMI
    8            | T_DEFINE liste_vars T_COLON type T_EQ_INIT . T_CONST_FLOAT T_SEMI

    T_CONST_INT    décalage et aller à l'état 63
    T_CONST_FLOAT  décalage et aller à l'état 64


état 50

    6 decl_define: T_DEFINE liste_vars T_COLON type T_SEMI .

    $défaut  réduction par utilisation de la règle 6 (decl_define)


état 51

   12 decl_constante: T_CONST T_IDENT T_COLON T_INTEGER T_EQ_INIT . T_CONST_INT T_SEMI

    T_CONST_INT  décalage et aller à l'état 65


état 52

   13 decl_constante: T_CONST T_IDENT T_COLON T_FLOAT T_EQ_INIT . T_CONST_FLOAT T_SEMI

    T_CONST_FLOAT  décalage et aller à l'état 66


état 53

   25 instruction: error T_SEMI .

    $défaut  réduction par utilisation de la règle 25 (instruction)


état 54

   28 condition: T_IF T_LPAREN . condition_expr T_RPAREN T_THEN T_COLON T_LBRACE partie_instructions T_RBRACE T_ELSE T_LBRACE partie_instructions T_RBRACE T_ENDIF T_SEMI

    T_NON          décalage et aller à l'état 67
    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 71

    expression      aller à l'état 72
    condition_expr  aller à l'état 73


état 55

   29 boucle_while: T_LOOP T_WHILE . T_LPAREN condition_expr T_RPAREN T_LBRACE partie_instructions T_RBRACE T_ENDLOOP T_SEMI

    T_LPAREN  décalage et aller à l'état 74


état 56

   30 boucle_for: T_FOR T_IDENT . T_IN borne_for T_TO borne_for T_LBRACE partie_instructions T_RBRACE T_ENDFOR T_SEMI

    T_IN  décalage et aller à l'état 75


état 57

   34 ecriture: T_OUT T_LPAREN . liste_out T_RPAREN T_SEMI

    T_IDENT   décalage et aller à l'état 76
    T_STRING  décalage et aller à l'état 77

    liste_out  aller à l'état 78
    elem_out   aller à l'état 79


état 58

   33 lecture: T_READ T_LPAREN . T_IDENT T_RPAREN T_SEMI

    T_IDENT  décalage et aller à l'état 80


état 59

   26 affectation: T_IDENT T_ASSIGN . expression T_SEMI

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 82


état 60

   27 affectation: T_IDENT T_LBRACK . expression T_RBRACK T_ASSIGN expression T_SEMI

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 83


état 61

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT . T_SEMI

    T_SEMI  décalage et aller à l'état 84


état 62

    9 decl_define: T_DEFINE liste_vars T_COLON T_LBRACK type T_SEMI . T_CONST_INT T_RBRACK T_SEMI

    T_CONST_INT  décalage et aller à l'état 85


état 63

    7 decl_define: T_DEFINE liste_vars T_COLON type T_EQ_INIT T_CONST_INT . T_SEMI

    T_SEMI  décalage et aller à l'état 86


état 64

    8 decl_define: T_DEFINE liste_vars T_COLON type T_EQ_INIT T_CONST_FLOAT . T_SEMI

    T_SEMI  décalage et aller à l'état 87


état 65

   12 decl_constante: T_CONST T_IDENT T_COLON T_INTEGER T_EQ_INIT T_CONST_INT . T_SEMI

    T_SEMI  décalage et aller à l'état 88


état 66

   13 decl_constante: T_CONST T_IDENT T_COLON T_FLOAT T_EQ_INIT T_CONST_FLOAT . T_SEMI

    T_SEMI  décalage et aller à l'état 89


état 67

   56 condition_expr: T_NON . T_LPAREN condition_expr T_RPAREN

    T_LPAREN  décalage et aller à l'état 90


état 68

   44 expression: T_IDENT .
   45           | T_IDENT . T_LBRACK expression T_RBRACK

    T_LBRACK  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 44 (expression)


état 69

   46 expression: T_CONST_INT .

    $défaut  réduction par utilisation de la règle 46 (expression)


état 70

   47 expression: T_CONST_FLOAT .

    $défaut  réduction par utilisation de la règle 47 (expression)


état 71

   43 expression: T_LPAREN . expression T_RPAREN
   54 condition_expr: T_LPAREN . condition_expr T_AND condition_expr T_RPAREN
   55               | T_LPAREN . condition_expr T_OR condition_expr T_RPAREN

    T_NON          décalage et aller à l'état 67
    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 71

    expression      aller à l'état 92
    condition_expr  aller à l'état 93


état 72

   39 expression: expression . T_PLUS expression
   40           | expression . T_MINUS expression
   41           | expression . T_MUL expression
   42           | expression . T_DIV expression
   48 condition_expr: expression . T_GT expression
   49               | expression . T_LT expression
   50               | expression . T_GE expression
   51               | expression . T_LE expression
   52               | expression . T_EQ expression
   53               | expression . T_NEQ expression

    T_LE     décalage et aller à l'état 94
    T_GE     décalage et aller à l'état 95
    T_EQ     décalage et aller à l'état 96
    T_NEQ    décalage et aller à l'état 97
    T_LT     décalage et aller à l'état 98
    T_GT     décalage et aller à l'état 99
    T_PLUS   décalage et aller à l'état 100
    T_MINUS  décalage et aller à l'état 101
    T_MUL    décalage et aller à l'état 102
    T_DIV    décalage et aller à l'état 103


état 73

   28 condition: T_IF T_LPAREN condition_expr . T_RPAREN T_THEN T_COLON T_LBRACE partie_instructions T_RBRACE T_ELSE T_LBRACE partie_instructions T_RBRACE T_ENDIF T_SEMI

    T_RPAREN  décalage et aller à l'état 104


état 74

   29 boucle_while: T_LOOP T_WHILE T_LPAREN . condition_expr T_RPAREN T_LBRACE partie_instructions T_RBRACE T_ENDLOOP T_SEMI

    T_NON          décalage et aller à l'état 67
    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 71

    expression      aller à l'état 72
    condition_expr  aller à l'état 105


état 75

   30 boucle_for: T_FOR T_IDENT T_IN . borne_for T_TO borne_for T_LBRACE partie_instructions T_RBRACE T_ENDFOR T_SEMI

    T_IDENT      décalage et aller à l'état 106
    T_CONST_INT  décalage et aller à l'état 107

    borne_for  aller à l'état 108


état 76

   38 elem_out: T_IDENT .

    $défaut  réduction par utilisation de la règle 38 (elem_out)


état 77

   37 elem_out: T_STRING .

    $défaut  réduction par utilisation de la règle 37 (elem_out)


état 78

   34 ecriture: T_OUT T_LPAREN liste_out . T_RPAREN T_SEMI
   36 liste_out: liste_out . T_COMMA elem_out

    T_RPAREN  décalage et aller à l'état 109
    T_COMMA   décalage et aller à l'état 110


état 79

   35 liste_out: elem_out .

    $défaut  réduction par utilisation de la règle 35 (liste_out)


état 80

   33 lecture: T_READ T_LPAREN T_IDENT . T_RPAREN T_SEMI

    T_RPAREN  décalage et aller à l'état 111


état 81

   43 expression: T_LPAREN . expression T_RPAREN

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 112


état 82

   26 affectation: T_IDENT T_ASSIGN expression . T_SEMI
   39 expression: expression . T_PLUS expression
   40           | expression . T_MINUS expression
   41           | expression . T_MUL expression
   42           | expression . T_DIV expression

    T_PLUS   décalage et aller à l'état 100
    T_MINUS  décalage et aller à l'état 101
    T_MUL    décalage et aller à l'état 102
    T_DIV    décalage et aller à l'état 103
    T_SEMI   décalage et aller à l'état 113


état 83

   27 affectation: T_IDENT T_LBRACK expression . T_RBRACK T_ASSIGN expression T_SEMI
   39 expression: expression . T_PLUS expression
   40           | expression . T_MINUS expression
   41           | expression . T_MUL expression
   42           | expression . T_DIV expression

    T_PLUS    décalage et aller à l'état 100
    T_MINUS   décalage et aller à l'état 101
    T_MUL     décalage et aller à l'état 102
    T_DIV     décalage et aller à l'état 103
    T_RBRACK  décalage et aller à l'état 114


état 84

    1 programme: T_BEGINPROJECT T_IDENT T_SEMI T_SETUP T_COLON partie_declarations T_RUN T_COLON T_LBRACE partie_instructions T_RBRACE T_ENDPROJECT T_SEMI .

    $défaut  réduction par utilisation de la règle 1 (programme)


état 85

    9 decl_define: T_DEFINE liste_vars T_COLON T_LBRACK type T_SEMI T_CONST_INT . T_RBRACK T_SEMI

    T_RBRACK  décalage et aller à l'état 115


état 86

    7 decl_define: T_DEFINE liste_vars T_COLON type T_EQ_INIT T_CONST_INT T_SEMI .

    $défaut  réduction par utilisation de la règle 7 (decl_define)


état 87

    8 decl_define: T_DEFINE liste_vars T_COLON type T_EQ_INIT T_CONST_FLOAT T_SEMI .

    $défaut  réduction par utilisation de la règle 8 (decl_define)


état 88

   12 decl_constante: T_CONST T_IDENT T_COLON T_INTEGER T_EQ_INIT T_CONST_INT T_SEMI .

    $défaut  réduction par utilisation de la règle 12 (decl_constante)


état 89

   13 decl_constante: T_CONST T_IDENT T_COLON T_FLOAT T_EQ_INIT T_CONST_FLOAT T_SEMI .

    $défaut  réduction par utilisation de la règle 13 (decl_constante)


état 90

   56 condition_expr: T_NON T_LPAREN . condition_expr T_RPAREN

    T_NON          décalage et aller à l'état 67
    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 71

    expression      aller à l'état 72
    condition_expr  aller à l'état 116


état 91

   45 expression: T_IDENT T_LBRACK . expression T_RBRACK

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 117


état 92

   39 expression: expression . T_PLUS expression
   40           | expression . T_MINUS expression
   41           | expression . T_MUL expression
   42           | expression . T_DIV expression
   43           | T_LPAREN expression . T_RPAREN
   48 condition_expr: expression . T_GT expression
   49               | expression . T_LT expression
   50               | expression . T_GE expression
   51               | expression . T_LE expression
   52               | expression . T_EQ expression
   53               | expression . T_NEQ expression

    T_LE      décalage et aller à l'état 94
    T_GE      décalage et aller à l'état 95
    T_EQ      décalage et aller à l'état 96
    T_NEQ     décalage et aller à l'état 97
    T_LT      décalage et aller à l'état 98
    T_GT      décalage et aller à l'état 99
    T_PLUS    décalage et aller à l'état 100
    T_MINUS   décalage et aller à l'état 101
    T_MUL     décalage et aller à l'état 102
    T_DIV     décalage et aller à l'état 103
    T_RPAREN  décalage et aller à l'état 118


état 93

   54 condition_expr: T_LPAREN condition_expr . T_AND condition_expr T_RPAREN
   55               | T_LPAREN condition_expr . T_OR condition_expr T_RPAREN

    T_AND  décalage et aller à l'état 119
    T_OR   décalage et aller à l'état 120


état 94

   51 condition_expr: expression T_LE . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 121


état 95

   50 condition_expr: expression T_GE . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 122


état 96

   52 condition_expr: expression T_EQ . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 123


état 97

   53 condition_expr: expression T_NEQ . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 124


état 98

   49 condition_expr: expression T_LT . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 125


état 99

   48 condition_expr: expression T_GT . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 126


état 100

   39 expression: expression T_PLUS . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 127


état 101

   40 expression: expression T_MINUS . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 128


état 102

   41 expression: expression T_MUL . expression

    T_IDENT        décalage et aller à l'état 68
    T_CONST_INT    décalage et aller à l'état 69
    T_CONST_FLOAT  décalage et aller à l'état 70
    T_LPAREN       décalage et aller à l'état 81

    expression  aller à l'état 129


état 103

   42 expression: expression T_DIV . expression
